demo6/demo6-1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo6-1-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo6-1
  template:
    metadata:
      labels:
        app: demo6-1
        # azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8081'
    spec:
      # serviceAccountName: hunter-sa
      # runtimeClassName: kata-cc-isolation
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: demo6-1-app
          image: "xueweihan/demo6:0.1"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo6-1-srv
spec:
  type: LoadBalancer
  selector:
    app: demo6-1
  ports:
    - port: 80
      targetPort: 8081
